fix referral links and add face lotion

--- a/app/content/categories/officedesk.mdx
+++ b/app/content/categories/officedesk.mdx
@@ -16,9 +16,9 @@ priceRanges: {
 | Product Name                           | Price Tier | Price (USD) | Why It's BuyWhoa                                                                                                                                                                | Link to Buy                                                                                                  |
 |---------------------------------------|------------|-------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------|
 | Used Steel Tanker Desk (generic)      | $          | Varies      | A favorite on Reddit’s r/BuyItForLife. Heavy-gauge steel construction from mid-century office supplies, often found in thrift stores/auctions. They can outlive multiple owners.                                        | Used local find; not typically sold on Amazon.                                                                |
-| HON BL Series Desk Shell              | $$         | $280        | HON is known for commercial-grade office furniture. The BL Series has a solid laminate surface and metal supports. Often seen in offices for decades without failing.                                                   | [Amazon](https://www.amazon.com/dp/B004N74O0I?tag=buywhoa-20)                                                  |
-| Vari Electric Standing Desk 48x30     | $$$        | $495        | Renowned for sturdy construction, 5-year warranty, and high-grade steel frame. The motor and lift mechanism are made to last through extensive daily use.                                                               | [Amazon](https://www.amazon.com/dp/B07VH6Z59B?tag=buywhoa-20)                                                  |
-| Fully Jarvis Bamboo Standing Desk     | $$$        | $599        | Praised on Reddit for a robust frame, easy repairs, and strong warranty. Bamboo top is durable and eco-friendly. Metal frame components are replaceable if needed.                                                       | [Amazon](https://www.amazon.com/dp/B07Y67BMRB?tag=buywhoa-20)                                                  |
-| Uplift V2 Standing Desk              | $$$$       | $700+       | A high-end sit/stand desk featuring a sturdy steel frame and a 15-year warranty on most parts. Built to handle daily height adjustments without wobbling or mechanical failures.                                        | [Amazon](https://www.amazon.com/dp/B07SL9YZG1?tag=buywhoa-20)                                                  |
-| Steelcase Migration SE / Ology Desks | $$$$       | $800+       | Steelcase is lauded for top-tier commercial office furniture. These desks are built for 24/7 use, with robust welds and high-quality components that can be serviced or replaced.                                        | [Steelcase Migration on Amazon](https://www.amazon.com/s?k=Steelcase+Migration&tag=buywhoa-20) (varies)        |
+| HON BL Series Desk Shell              | $$         | $280        | HON is known for commercial-grade office furniture. The BL Series has a solid laminate surface and metal supports. Often seen in offices for decades without failing.                                                   | [Amazon](https://amzn.to/3EDqFzQ)                                                  |
+| Vari Electric Standing Desk 48x30     | $$$        | $750        | Renowned for sturdy construction, 5-year warranty, and high-grade steel frame. The motor and lift mechanism are made to last through extensive daily use.                                                               | [Amazon](https://amzn.to/4hW9Crz)                                                  |
+| Fully Jarvis Bamboo Standing Desk     | $$$        | $599        | Praised on Reddit for a robust frame, easy repairs, and strong warranty. Bamboo top is durable and eco-friendly. Metal frame components are replaceable if needed.                                                       | [Amazon](https://amzn.to/431Dz4G)                                                  |
+| Uplift V2 Standing Desk              | $$$$       | $700+       | A high-end sit/stand desk featuring a sturdy steel frame and a 15-year warranty on most parts. Built to handle daily height adjustments without wobbling or mechanical failures.                                        | [Amazon](https://amzn.to/4k0NCgu)                                                  |
+| Steelcase Migration SE / Ology Desks | $$$$       | $800+       | Steelcase is lauded for top-tier commercial office furniture. These desks are built for 24/7 use, with robust welds and high-quality components that can be serviced or replaced.                                        | [Amazon](https://amzn.to/3QmnbEl)      |
 | Herman Miller Renew Sit-to-Stand Desk | $$$$       | $1,000+     | Herman Miller’s reputation for durability carries over to its desk line. Long warranty, excellent customer support, and modular parts ensure a “buy it once” investment.                                                | [Herman Miller on Amazon](https://www.amazon.com/stores/HermanMiller/page/1C690BEA-C819-4394-A6C4-3CFC5183D019?tag=buywhoa-20) |
