fix broken links

--- a/app/content/categories/facelotion.mdx
+++ b/app/content/categories/facelotion.mdx
@@ -15,13 +15,13 @@ priceRanges: {
 
 | Product Name | Price Tier | Price (USD) | Why It's BIFL | Link to Buy |
 |--------------|------------|-------------|---------------|-------------|
-| CeraVe Daily Moisturizing Lotion | $ | 9 | Trusted, no-frills formula recommended by dermatologists. Contains ceramides and hyaluronic acid for barrier support. Often cited on Reddit for its effectiveness, wide availability, and affordability. | [Amazon](https://www.amazon.com/dp/B000YJ2SLG?tag=buywhoa-20) |
-| Cetaphil Daily Hydrating Lotion | $ | 10 | Lightweight, fragrance-free moisturizer. Gentle enough for sensitive skin and popular for its non-irritating, quick-absorbing properties. | [Amazon](https://www.amazon.com/dp/B014D0DA08?tag=buywhoa-20) |
-| Vanicream Moisturizing Cream | $$ | 13 | Hypoallergenic formula without dyes or fragrances. A go-to for sensitive or eczema-prone skin. Recommended repeatedly on SkincareAddiction for simplicity and soothing hydration. | [Amazon](https://www.amazon.com/dp/B000Q67QUA?tag=buywhoa-20) |
-| Neutrogena Hydro Boost Gel-Cream | $$ | 15 | Gel-based moisturizer with hyaluronic acid that delivers a lightweight but hydrating feel. Frequently suggested for those who dislike heavier lotions. | [Amazon](https://www.amazon.com/dp/B00NR1YQK4?tag=buywhoa-20) |
-| La Roche-Posay Toleriane Double Repair | $$ | 20 | Contains ceramides, niacinamide, and prebiotics. Non-comedogenic and dermatologist-tested; widely praised for restoring the skin barrier while remaining gentle. | [Amazon](https://www.amazon.com/dp/B01M1HIIUT?tag=buywhoa-20) |
-| First Aid Beauty Ultra Repair Cream | $$$ | 34 | Rich, soothing cream that helps with dryness, redness, and irritation. Known for its soothing colloidal oatmeal. A favorite “rescue cream” in cooler climates. | [Amazon](https://www.amazon.com/dp/B004G8QETS?tag=buywhoa-20) |
-| Paula's Choice Skin Recovery Moisturizer | $$$ | 29 | Formulated for sensitive, dry, or compromised skin. Contains antioxidants and ceramides. Highly rated for nourishing skin without heaviness or irritation. | [Amazon](https://www.amazon.com/dp/B00L3OY0XS?tag=buywhoa-20) |
-| Kiehl's Ultra Facial Cream | $$$ | 38 | Classic, long-standing formula with squalane for deep hydration. Known for its lightweight feel yet moisturizing properties. A staple product often re-purchased for years. | [Amazon](https://www.amazon.com/dp/B003UMN24G?tag=buywhoa-20) |
-| Drunk Elephant Protini Polypeptide Cream | $$$$ | 68 | Lightweight cream with peptides and amino acids. Regularly cited as a “holy grail” moisturizer on SkincareAddiction for smoothing texture and firming. | [Amazon](https://www.amazon.com/dp/B078G8ZG5R?tag=buywhoa-20) |
-| Tatcha The Water Cream | $$$$ | 69 | Luxurious, oil-free water cream with Japanese botanicals. Provides a “barely-there” feel. Though pricey, many swear by its ability to plump and brighten skin. | [Amazon](https://www.amazon.com/dp/B071L1P5S1?tag=buywhoa-20) |
+| CeraVe Daily Moisturizing Lotion | $ | $9 | Trusted, no-frills formula recommended by dermatologists. Contains ceramides and hyaluronic acid for barrier support. Often cited on Reddit for its effectiveness, wide availability, and affordability. | [Amazon](https://www.amazon.com/dp/B000YJ2SLG?tag=buywhoa-20) |
+| Cetaphil Daily Hydrating Lotion | $ | $10 | Lightweight, fragrance-free moisturizer. Gentle enough for sensitive skin and popular for its non-irritating, quick-absorbing properties. | [Amazon](https://www.amazon.com/dp/B014D0DA08?tag=buywhoa-20) |
+| Vanicream Moisturizing Cream | $$ | $13 | Hypoallergenic formula without dyes or fragrances. A go-to for sensitive or eczema-prone skin. Recommended repeatedly on SkincareAddiction for simplicity and soothing hydration. | [Amazon](https://www.amazon.com/dp/B000Q67QUA?tag=buywhoa-20) |
+| Neutrogena Hydro Boost Gel-Cream | $$ | $15 | Gel-based moisturizer with hyaluronic acid that delivers a lightweight but hydrating feel. Frequently suggested for those who dislike heavier lotions. | [Amazon](https://www.amazon.com/dp/B00NR1YQK4?tag=buywhoa-20) |
+| La Roche-Posay Toleriane Double Repair | $$ | $20 | Contains ceramides, niacinamide, and prebiotics. Non-comedogenic and dermatologist-tested; widely praised for restoring the skin barrier while remaining gentle. | [Amazon](https://www.amazon.com/dp/B01M1HIIUT?tag=buywhoa-20) |
+| First Aid Beauty Ultra Repair Cream | $$$ | $34 | Rich, soothing cream that helps with dryness, redness, and irritation. Known for its soothing colloidal oatmeal. A favorite “rescue cream” in cooler climates. | [Amazon](https://www.amazon.com/dp/B004G8QETS?tag=buywhoa-20) |
+| Paula's Choice Skin Recovery Moisturizer | $$$ | $29 | Formulated for sensitive, dry, or compromised skin. Contains antioxidants and ceramides. Highly rated for nourishing skin without heaviness or irritation. | [Amazon](https://www.amazon.com/dp/B00L3OY0XS?tag=buywhoa-20) |
+| Kiehl's Ultra Facial Cream | $$$ | $38 | Classic, long-standing formula with squalane for deep hydration. Known for its lightweight feel yet moisturizing properties. A staple product often re-purchased for years. | [Amazon](https://www.amazon.com/dp/B003UMN24G?tag=buywhoa-20) |
+| Drunk Elephant Protini Polypeptide Cream | $$$$ | $68 | Lightweight cream with peptides and amino acids. Regularly cited as a “holy grail” moisturizer on SkincareAddiction for smoothing texture and firming. | [Amazon](https://www.amazon.com/dp/B078G8ZG5R?tag=buywhoa-20) |
+| Tatcha The Water Cream | $$$$ | $69 | Luxurious, oil-free water cream with Japanese botanicals. Provides a “barely-there” feel. Though pricey, many swear by its ability to plump and brighten skin. | [Amazon](https://www.amazon.com/dp/B071L1P5S1?tag=buywhoa-20) |
