fix broken table for office desks v2

--- a/app/content/categories/officedesk.mdx
+++ b/app/content/categories/officedesk.mdx
@@ -13,11 +13,11 @@ priceRanges: {
 
 ## Products
 
-| Product Name                           | Price Tier | Price (USD) | Why It's BIFL | Link to Buy |
-|---------------------------------------|------------|-------------|---------------|-------------|
-| HON BL Series Desk Shell              | $$         | $280        | HON is known for commercial-grade office furniture. The BL Series has a solid laminate surface and metal supports. Often seen in offices for decades without failing. | [Amazon](https://amzn.to/3EDqFzQ) |
-| Vari Electric Standing Desk 48x30     | $$$        | $750        | Renowned for sturdy construction, 5-year warranty, and high-grade steel frame. The motor and lift mechanism are made to last through extensive daily use. | [Amazon](https://amzn.to/4hW9Crz) |
-| Fully Jarvis Bamboo Standing Desk     | $$$        | $599        | Praised on Reddit for a robust frame, easy repairs, and strong warranty. Bamboo top is durable and eco-friendly. Metal frame components are replaceable if needed. | [Amazon](https://amzn.to/431Dz4G) |
-| Uplift V2 Standing Desk              | $$$$       | $700+       | A high-end sit/stand desk featuring a sturdy steel frame and a 15-year warranty on most parts. Built to handle daily height adjustments without wobbling or mechanical failures. | [Amazon](https://amzn.to/4k0NCgu) |
-| Steelcase Migration SE / Ology Desks | $$$$       | $800+       | Steelcase is lauded for top-tier commercial office furniture. These desks are built for 24/7 use, with robust welds and high-quality components that can be serviced or replaced. | [Amazon](https://amzn.to/3QmnbEl) |
-| Herman Miller Renew Sit-to-Stand Desk | $$$$       | $1,000+     | Herman Miller’s reputation for durability carries over to its desk line. Long warranty, excellent customer support, and modular parts ensure a “buy it once” investment. | [Herman Miller on Amazon](https://www.amazon.com/stores/HermanMiller/page/1C690BEA-C819-4394-A6C4-3CFC5183D019?tag=buywhoa-20) |
+| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
+|--------------|------------|-------------|---------------|-------------|
+| HON BL Series Desk Shell | $$ | $280 | HON is known for commercial-grade office furniture. The BL Series has a solid laminate surface and metal supports. Often seen in offices for decades without failing. | [Amazon](https://amzn.to/3EDqFzQ) |
+| Vari Electric Standing Desk 48x30 | $$$ | $750 | Renowned for sturdy construction, 5-year warranty, and high-grade steel frame. The motor and lift mechanism are made to last through extensive daily use. | [Amazon](https://amzn.to/4hW9Crz) |
+| Fully Jarvis Bamboo Standing Desk | $$$ | $599 | Praised on Reddit for a robust frame, easy repairs, and strong warranty. Bamboo top is durable and eco-friendly. Metal frame components are replaceable if needed. | [Amazon](https://amzn.to/431Dz4G) |
+| Uplift V2 Standing Desk | $$$$ | $700+ | A high-end sit/stand desk featuring a sturdy steel frame and a 15-year warranty on most parts. Built to handle daily height adjustments without wobbling or mechanical failures. | [Amazon](https://amzn.to/4k0NCgu) |
+| Steelcase Migration SE / Ology Desks | $$$$ | $800+ | Steelcase is lauded for top-tier commercial office furniture. These desks are built for 24/7 use, with robust welds and high-quality components that can be serviced or replaced. | [Amazon](https://amzn.to/3QmnbEl) |
+| Herman Miller Renew Sit-to-Stand Desk | $$$$ | $1,000+ | Herman Miller's reputation for durability carries over to its desk line. Long warranty, excellent customer support, and modular parts ensure a "buy it once" investment. | [Herman Miller on Amazon](https://www.amazon.com/stores/HermanMiller/page/1C690BEA-C819-4394-A6C4-3CFC5183D019?tag=buywhoa-20) |
