fix tables for buywhoa

--- a/app/content/categories/headphones.mdx
+++ b/app/content/categories/headphones.mdx
@@ -13,7 +13,7 @@ priceRanges: {
 
 ## Products
 
-| Product Name | Price Tier | Price (USD) | Why It's BIFL | Link to Buy |
+| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
 |--------------|------------|-------------|---------------|-------------|
 | Koss Porta Pro | $ | $40 | Classic on-ear design with a **limited lifetime warranty**, ensuring decades of usability. Owners report using them for *40+ years* with minimal issues. | [Amazon](https://www.amazon.com/dp/B00001P4ZH?tag=buywhoa-20) |
 | Shure SE215 | $$ | $99 | **Stage-worthy** in-ear monitors with tough shells and a Kevlar-reinforced detachable cable for longevity. Easily replaceable cables make these a long-term investment. | [Amazon](https://www.amazon.com/dp/B00A16BT4E?tag=buywhoa-20) |
