fix links for tableware and knives

--- a/app/content/categories/knives.mdx
+++ b/app/content/categories/knives.mdx
@@ -19,6 +19,6 @@ priceRanges: {
 | Mercer Culinary Renaissance 8-Inch Forged Chef's Knife | $ | $45 | Forged construction, comfortable handle, excellent balance, taper-ground edge, often used in culinary schools. | [Amazon](https://www.amazon.com/dp/B002R1CGV6/ref=nosim?tag=buywhoa-20) |
 | Zwilling J.A. Henckels Professional S 8-inch Chef's Knife | $$ | $99 | Forged construction, ice-hardened FRIODUR® blade, ergonomic handle, lifetime warranty, some models have a hollow edge design. | [Amazon](https://www.amazon.com/dp/B00004RFMT/ref=nosim?tag=buywhoa-20) |
 | Tojiro DP 8.2 in. Gyutoh Chef's Knife | $$ | $86 | Handcrafted in Japan, razor-sharp, well-balanced, durable, factory open to the public. | [Amazon](https://www.amazon.com/dp/B000UAPQEA/ref=nosim?tag=buywhoa-20) |
-| Shun Classic 8 in. Chef's Knife | $$ | $130 | Handcrafted in Japan, exceptional sharpness and edge retention, durable, beautiful Damascus pattern, lifetime sharpening service. | [Amazon](https://www.amazon.com/dp/B0007VB4Y8/ref=nosim?tag=buywhoa-20) |
-| Miyabi Birchwood SG2 8.5 in. Gyutoh Chef's Knife | $$$ | $250 | Handcrafted in Japan, exceptional sharpness, beautiful design, durable, Cryodur ice-hardened blade, hammered finish. | [Amazon](https://www.amazon.com/dp/B00QY5N7WK/ref=nosim?tag=buywhoa-20) |
+| Shun Classic 8 in. Chef's Knife | $$ | $130 | Handcrafted in Japan, exceptional sharpness and edge retention, durable, beautiful Damascus pattern, lifetime sharpening service. | [Amazon](https://amzn.to/3CXOYrE) |
+| Miyabi Birchwood SG2 8.5 in. Gyutoh Chef's Knife | $$$ | $250 | Handcrafted in Japan, exceptional sharpness, beautiful design, durable, Cryodur ice-hardened blade, hammered finish. | [Amazon](https://amzn.to/4k14HXE) |
 | Global G-2 8 in. Classic Chef's Knife | $$ | $100 | Lightweight, precisely balanced, razor-sharp edge, comfortable grip, designed by Komin Yamada. | [Amazon](https://www.amazon.com/dp/B00005OL44/ref=nosim?tag=buywhoa-20) |
