add more categories v2

--- a/app/content/categories/facelotion.mdx
+++ b/app/content/categories/facelotion.mdx
@@ -13,7 +13,7 @@ priceRanges: {
 
 ## Products
 
-| Product Name | Price Tier | Price (USD) | Why It's BIFL | Link to Buy |
+| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
 |--------------|------------|-------------|---------------|-------------|
 | CeraVe Daily Moisturizing Lotion | $ | $9 | Trusted, no-frills formula recommended by dermatologists. Contains ceramides and hyaluronic acid for barrier support. Often cited on Reddit for its effectiveness, wide availability, and affordability. | [Amazon](https://www.amazon.com/dp/B000YJ2SLG?tag=buywhoa-20) |
 | Cetaphil Daily Hydrating Lotion | $ | $10 | Lightweight, fragrance-free moisturizer. Gentle enough for sensitive skin and popular for its non-irritating, quick-absorbing properties. | [Amazon](https://www.amazon.com/dp/B014D0DA08?tag=buywhoa-20) |
