add more categories v3

--- a/app/content/categories/airfilter.mdx
+++ b/app/content/categories/airfilter.mdx
@@ -3,12 +3,11 @@ title: "Air Filters"
 id: "air-filters"
 description: "Durable air purifiers and filters offering long-lasting performance and easy maintenance."
 lastUpdated: "2025-02"
-priceRanges: {
-  "$": "Under $20",
-  "$$": "$20-50",
-  "$$$": "$50-100",
+priceRanges:
+  "$": "Under $20"
+  "$$": "$20-50"
+  "$$$": "$50-100"
   "$$$$": "$100+"
-}
 ---
 
 ## Products
