--- a/app/content/categories/travelmug.mdx
+++ b/app/content/categories/travelmug.mdx
@@ -1,13 +1,13 @@
+---
 title: "Travel Mugs"
 id: "travel-mugs"
 description: "Durable and high-quality travel mugs built to last a lifetime."
 lastUpdated: "2025-02"
-priceRanges: {
-  "$": "Under $20",
-  "$$": "$20-50",
-  "$$$": "$50-100",
+priceRanges:
+  "$": "Under $20"
+  "$$": "$20-50"
+  "$$$": "$50-100"
   "$$$$": "$100+"
-}
 ---
 
 ## Products
