--- a/app/content/categories/bathtowels.mdx
+++ b/app/content/categories/bathtowels.mdx
@@ -1,13 +1,13 @@
+---
 title: "Bath Towels"
 id: "bath-towels"
 description: "High-quality cotton, linen, and bamboo bath towels known for absorbency and durability."
 lastUpdated: "2025-02"
-priceRanges: {
-  "$": "Under $20",
-  "$$": "$20-50",
-  "$$$": "$50-100",
+priceRanges:
+  "$": "Under $20"
+  "$$": "$20-50"
+  "$$$": "$50-100"
   "$$$$": "$100+"
-}
 ---
 
 ## Products
