--- a/app/content/categories/router.mdx
+++ b/app/content/categories/router.mdx
@@ -1,13 +1,13 @@
+---
 title: "Routers"
 id: "routers"
 description: "Budget-friendly and high-performance Wi-Fi routers known for reliability, firmware support, and longevity."
 lastUpdated: "2025-02"
-priceRanges: {
-  "$": "Under $20",
-  "$$": "$20-50",
-  "$$$": "$50-100",
+priceRanges:
+  "$": "Under $20"
+  "$$": "$20-50"
+  "$$$": "$50-100"
   "$$$$": "$100+"
-}
 ---
 
 ## Products
