--- a/app/content/categories/backpack.mdx
+++ b/app/content/categories/backpack.mdx
@@ -15,11 +15,11 @@ priceRanges: {
 
 | Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
 |--------------|------------|-------------|---------------|-------------|
-| JanSport SuperBreak One Backpack | $ | $38 | Simple, durable construction with a lifetime warranty. Many users report using it for over 20 years. | [Amazon](https://amzn.to/3CSevCA) |
-| SHRRADOO Extra Large 50L Travel Laptop Backpack | $ | $30 | Large capacity with TSA-friendly design, USB charging port, and durable polyester construction. | [Amazon](https://amzn.to/41k1RWs) |
-| YOREPEK Travel Backpack | $ | $38 | 50L capacity, water-resistant, TSA-friendly design with multiple compartments for organization. | [Amazon](https://amzn.to/4gJNW0f) |
-| Targus Legend IQ Backpack | $ | $30 | Dedicated laptop compartment, tablet sleeve, and organized pockets, backed by a limited lifetime warranty. | [Best Buy](https://amzn.to/4gMpDin) |
-| Solo New York Duane Hybrid Briefcase Backpack | $$ | $46 | Convertible design from briefcase to backpack, padded laptop compartment, durable build with a 5-year warranty. | [Best Buy](https://amzn.to/4i2CvSl) |
+| JanSport SuperBreak One Backpack | $ | $38 | Time-tested design made with durable materials. JanSport stands behind it with a lifetime warranty ([[Request] backpacks with lifetime warranty? : r/BuyItForLife](https://www.reddit.com/r/BuyItForLife/comments/i9saor/request_backpacks_with_lifetime_warranty/#:~:text=%E2%80%A2)). Many owners report their JanSport packs lasting for decades of daily use ([[Request] backpacks with lifetime warranty? : r/BuyItForLife](https://www.reddit.com/r/BuyItForLife/comments/i9saor/request_backpacks_with_lifetime_warranty/#:~:text=2nd%20Jansport%2C%20I%20think%20if,cant%20be%20fixed%20they%20replace)). The straightforward build (one big compartment, quality zippers) means fewer parts that can fail. And if anything *does* go wrong, JanSport’s free repair or replacement policy has you covered ([[Request] backpacks with lifetime warranty? : r/BuyItForLife](https://www.reddit.com/r/BuyItForLife/comments/i9saor/request_backpacks_with_lifetime_warranty/#:~:text=JanSport%20and%20Deuter%20offer%20great%2C,than%20brands%20like%20Mission%20Workshop)). This affordable classic has proven it can survive years of school and travel – an investment that often outlasts its original owner. | [Amazon](https://amzn.to/3CSevCA) |
+| SHRRADOO Extra Large 50L Travel Laptop Backpack | $ | $30 | An inexpensive 50L pack that punches above its weight in durability. It’s made of tough, water-resistant polyester and built to hold heavy loads. In fact, one long-haul trucker reported that after a year of constant use on the road, their Shrradoo was “still going strong” with “absolutely no issues” ([This Travel Backpack Is on Sale at Amazon](https://www.travelandleisure.com/shrradoo-travel-backpack-amazon-7095188#:~:text=If%20you%E2%80%99re%20still%20not%20sold%2C,%E2%80%9D)). Travelers love its massive capacity and features (USB charging port, lots of pockets), and reviews frequently mention the bag “feels like it’ll outlast all of us” ([This Travel Backpack Is on Sale at Amazon](https://www.travelandleisure.com/shrradoo-travel-backpack-amazon-7095188#:~:text=Customers%20couldn%E2%80%99t%20help%20but%20rave,%E2%80%9D)). For around $30, you get a surprisingly hardy backpack that **many** users say can withstand stuffing to the max and rough handling ([This Travel Backpack Is on Sale at Amazon](https://www.travelandleisure.com/shrradoo-travel-backpack-amazon-7095188#:~:text=Customers%20couldn%E2%80%99t%20help%20but%20rave,%E2%80%9D)). | [Amazon](https://amzn.to/41k1RWs) |
+| YOREPEK Travel Backpack | $ | $38 | A cavernous 50L pack made of heavy-duty polyester and robust stitching. It’s very popular as a budget carry-on, and **users attest to its longevity** – one Redditor used a Yorepek daily for *years* as an EDC laptop bag and said it “held up well” and became their tech workhorse ([Is Yorepek a good brand? : r/backpacks](https://www.reddit.com/r/backpacks/comments/myx7j2/is_yorepek_a_good_brand/#:~:text=%E2%80%A2)). It’s TSA-friendly (unzips fully) and has sturdy zippers built to handle overstuffing. The design is nearly identical to the Shrradoo (they’re often made by the same factory ([Anyone have experience with the SHRRADOO Extra Large 52L Travel Laptop Backpack (Swiss Gear dupe)? : r/onebag](https://www.reddit.com/r/onebag/comments/1aepz9s/anyone_have_experience_with_the_shrradoo_extra/#:~:text=%E2%80%A2))), so you can expect similar real-world durability. In short, it’s **comfortable**, **roomy**, and according to one owner, “has handled heavy loads pretty well” over time ([Is Yorepek a good brand? : r/backpacks](https://www.reddit.com/r/backpacks/comments/myx7j2/is_yorepek_a_good_brand/#:~:text=%E2%80%A2)). | [Amazon](https://amzn.to/4gJNW0f) |
+| Targus Legend IQ Backpack | $ | $30 | A value-priced laptop backpack with features and build quality beyond its price. It’s backed by Targus’ **limited lifetime warranty**, and Targus has a proven history of honoring that – one user had their 8-year-old Targus replaced under warranty, and the *replacement* is still going strong 7 years later ([Targus Backpack replacement : r/sysadmin](https://www.reddit.com/r/sysadmin/comments/sgbgay/targus_backpack_replacement/#:~:text=TL%3A%20DR%3A%20If%20it%27s%20damaged%2C,Contact%20them)). The Legend IQ’s durable poly fabric, reinforced seams, and quality zippers make it suitable for daily commuting. It has a padded laptop compartment and organized pockets that hold up to constant use. Targus gear has been known to last for a decade or more of hauling tech (some users even got 15+ years from their Targus bags) ([Targus Delivers on the Backpack of my lifetime : r/BuyItForLife](https://www.reddit.com/r/BuyItForLife/comments/2wbys1/targus_delivers_on_the_backpack_of_my_lifetime/#:~:text=I%20recently%20decided%20to%20stop,just%20how%20i%20like%20it)) ([Targus Delivers on the Backpack of my lifetime : r/BuyItForLife](https://www.reddit.com/r/BuyItForLife/comments/2wbys1/targus_delivers_on_the_backpack_of_my_lifetime/#:~:text=areas,since%20i%20sent%20the%20pics)), so this backpack is built to be a long-term companion. | [Best Buy](https://amzn.to/4gMpDin) |
+| Solo New York Duane Hybrid Briefcase Backpack | $$ | $46 | A clever convertible bag (briefcase to backpack) that’s built with longevity in mind. Its materials include thick polyester fabric and robust stitching, plus it comes with a **5-year warranty** for peace of mind ([Backpacks | BuyWhoa](https://buywhoa.com/categories/backpack#:~:text=Solo%20New%20York%20Duane%20Hybrid,Briefcase%20Backpack)). The Duane’s design caters to professionals – the zippers and handles are made to endure daily transitions between modes. Users praise its sturdiness; even heavily loaded with laptop and files, it holds up well without strain. In fact, many owners use it for years in commute or travel rotations with minimal wear. The versatility and solid build make it a reliable workhorse that outlasts many pure backpacks. | [Amazon](https://amzn.to/4i2CvSl) |
 | Vessel PrimeX Backpack | $$$$ | $265 | Premium golf backpack with multiple compartments, ergonomic design, and high-quality craftsmanship. | [Vessel](https://vesselgolf.com/products/primex-backpack) |
-| Tumi Alpha Bravo London Roll Top Backpack | $$$$ | $495 | Durable ballistic nylon, roll-top closure, dedicated laptop compartment, and a 5-year warranty. | [Tumi](https://www.tumi.com/c/alpha-bravo) |
-| Peak Design Travel Backpack 45L | $$$ | $300 | Expandable design (35L-45L), weatherproof construction, dedicated laptop sleeve, backed by a lifetime warranty. | [Peak Design](https://amzn.to/4k0dSrf) |
+| Tumi Alpha Bravo London Roll Top Backpack | $$$$ | $495 | A high-end backpack made from heavy-duty ballistic nylon and built to Tumi’s exacting standards. The material is the same 1680D nylon used in Tumi luggage – extremely abrasion-resistant and tough. It’s designed to put up with serious travel: toss it in overhead bins, daily commute abuse, you name it. Tumi provides a 5-year warranty, and many users report *decades* of use from their older Tumi bags ([Is TUMI worth the price tag? : r/ManyBaggers](https://www.reddit.com/r/ManyBaggers/comments/17tam4r/is_tumi_worth_the_price_tag/#:~:text=No%20question%20that%20Tumi%20is,user%2C%20there%27s%20no%20better%20product)). The London Roll Top also features excellent hardware (strong buckles, zippers, and a waterproof roll-top closure) that are built to last. It’s a backpack you can use hard, and, as one seasoned traveler put it, Tumi bags “wear like iron” ([Is TUMI worth the price tag? : r/ManyBaggers](https://www.reddit.com/r/ManyBaggers/comments/17tam4r/is_tumi_worth_the_price_tag/#:~:text=No%20question%20that%20Tumi%20is,user%2C%20there%27s%20no%20better%20product)) – expect this one to be with you for a long time. | [Tumi](https://www.tumi.com/c/alpha-bravo) |
+| Peak Design Travel Backpack 45L | $$$ | $300 | A thoughtfully engineered travel pack with a **lifetime warranty** from Peak Design ([Lifetime Product Warranty - Peak Design](https://support.peakdesign.com/pages/faq/?a=Lifetime-Product-Warranty---id--EBeH0Ls5QOeSmTGbRkgasQ#:~:text=Your%20Peak%20Design%20product%20is,as%20it%27s%20the%20genuine%20article)). Its 400D nylon canvas shell is weatherproof and practically *bombproof*, designed to handle being dragged, dropped, and overloaded without issue ([I Want to Hear From Peak Design Travel Bag Owners : r/onebag](https://www.reddit.com/r/onebag/comments/jw3w4t/i_want_to_hear_from_peak_design_travel_bag_owners/#:~:text=It%20is%20also%20durable,of%20trouble%20from%20the%20zippers)). One owner said, *“I have slammed it and dragged it and not a single hole anywhere and no hint of trouble from the zippers,”* regarding this bag’s durability ([I Want to Hear From Peak Design Travel Bag Owners : r/onebag](https://www.reddit.com/r/onebag/comments/jw3w4t/i_want_to_hear_from_peak_design_travel_bag_owners/#:~:text=It%20is%20also%20durable,of%20trouble%20from%20the%20zippers)). The shoulder straps and handles are rugged (tested to withstand heavy weights), and the expandable design doesn’t compromise its structural integrity. This backpack is often praised as *“durable af”* on travel forums ([I Want to Hear From Peak Design Travel Bag Owners : r/onebag](https://www.reddit.com/r/onebag/comments/jw3w4t/i_want_to_hear_from_peak_design_travel_bag_owners/#:~:text=anywhere%20and%20no%20hint%20of,The%20features%20that)). It’s built for adventurers who need their pack to last a lifetime of trips – and Peak Design will repair or replace it if it doesn’t ([Peak Design Support Center](https://www.peakdesign.com/pages/support#:~:text=Peak%20Design%20Support%20Center%20Our,knowing%20it%20will%20remain)). | [Peak Design](https://amzn.to/4k0dSrf) |
