--- a/app/content/categories/cookware.mdx
+++ b/app/content/categories/cookware.mdx
@@ -1,29 +1,29 @@
----
-title: "Kitchen Cookware"
-id: "kitchen-cookware"
-description: "Durable and high-quality cookware built to last a lifetime."
-lastUpdated: "2025-02"
-priceRanges: {
-  "$": "Under $50",
-  "$$": "$50-200",
-  "$$$": "$200-500",
-  "$$$$": "$500+"
-}
----
+  ---
+  title: "Kitchen Cookware"
+  id: "kitchen-cookware"
+  description: "Durable and high-quality cookware built to last a lifetime."
+  lastUpdated: "2025-02"
+  priceRanges: {
+    "$": "Under $50",
+    "$$": "$50-200",
+    "$$$": "$200-500",
+    "$$$$": "$500+"
+  }
+  ---
 
-## Products
+  ## Products
 
-| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link |
-|--------------|------------|-------------|---------------|------|
-| Lodge Cast Iron Skillet | $$ | $50 | Virtually indestructible and offering excellent heat retention, this skillet can be seasoned to a naturally non-stick surface and will last for generations. It's pre-seasoned and versatile for various cooking methods (stovetop, oven, grill). | [Amazon](https://www.amazon.com/dp/B00006JSUA/ref=nosim?tag=buywhoa-20) |
-| Lodge Blacklock Cast Iron Skillet | $$ | $90 | A lighter version of the classic Lodge skillet, this pan replicates antique cast iron with a triple seasoned, super nonstick surface. | [Amazon](https://www.amazon.com/dp/B08C9FHFXH/ref=nosim?tag=buywhoa-20) |
-| Field Company Cast Iron Skillet | $$$ | $165 | This skillet is lightweight, easy to maneuver, and built to last for generations. | [Amazon](https://www.amazon.com/dp/B09NXTH8NZ/ref=nosim?tag=buywhoa-20) |
-| Stargazer Cast Iron Skillet | $$$ | $115 | Lightweight with an easy-pour edge, this skillet is extremely nonstick and easy to clean. | [Amazon](https://www.amazon.com/dp/B07YVPZT8G/ref=nosim?tag=buywhoa-20) |
-| Smithey Ironware No. 10 Cast Iron Skillet | $$$ | $210 | A classic cast iron skillet with a smooth cooking surface, this skillet is known for its quality and durability. | [Amazon](https://www.amazon.com/dp/B07QKPQ1BH/ref=nosim?tag=buywhoa-20) |
-| Yeti 12-Inch Cast Iron Skillet | $$$ | $250 | A splurge-worthy cast iron skillet with a flat bottom that can be used on an induction cooktop as well as a gas range or traditional electric cooktop. | [Yeti](https://www.yeti.com/) |
-| Le Creuset Enameled Cast Iron Dutch Oven | $$$ | $380 | Renowned for its exceptional heat retention and distribution, this Dutch oven excels at braising, searing, roasting, and more. Its chip-resistant enamel finish makes it easy to clean and compatible with various cooktops. | [Amazon](https://www.amazon.com/dp/B01MXYN7OR/ref=nosim?tag=buywhoa-20) |
-| KitchenAid 12-Inch Enameled Cast Iron Frying Pan | $$$ | $150 | After testing a slew of enameled cast iron skillets, experts named KitchenAid's 12-Inch Enameled Cast Iron Frying Pan their overall favorite. | [Amazon](https://www.amazon.com/dp/B07YX5N9W6/ref=nosim?tag=buywhoa-20) |
-| Caraway 10.5 Inch Enameled Cast Iron Skillet | $$$ | $135 | This skillet is so beautiful you'll probably want to display it on the stove while not in use. | [Caraway](https://www.carawayhome.com/products/mini-duo) |
-| All-Clad D3 Stainless Cookware | $$$ | $300 | Made in the USA with responsive tri-ply construction, this cookware offers even heating and exceptional durability. | [Amazon](https://www.amazon.com/dp/B00FUF5K8W/ref=nosim?tag=buywhoa-20) |
-| Demeyere Industry 5 Cookware | $$$ | $400 | Belgian-made with a 5-ply construction and no interior rivets for easy cleaning, this cookware offers superior heat distribution and durability. | [Demeyere](https://www.surlatable.com/demeyere-industry5/) |
-| De Buyer Carbon Steel Pan | $$ | $80 | Carbon steel pans have the durability of cast iron with a smoother, glassier surface. Extremely maneuverable, very durable, and naturally nonstick. | [Amazon](https://www.amazon.com/dp/B00462QP0W/ref=nosim?tag=buywhoa-20) |
+  | Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link |
+  |--------------|------------|-------------|---------------|------|
+  | Lodge Cast Iron Skillet | $$ | $50 | Virtually indestructible 100% cast iron. This skillet can literally last *generations* – one Redditor restoring an 1850s cast iron pan noted, *“a cast iron pan will last generations”* ([Restoring a cast iron pan from 1850 : r/oddlysatisfying](https://www.reddit.com/r/oddlysatisfying/comments/17vsu7n/restoring_a_cast_iron_pan_from_1850/#:~:text=%E2%80%A2)). Lodge’s modern pans are no different. They come pre-seasoned, and the seasoning only gets better and more non-stick with use. Unlike cheap pans that warp or coatings that peel, cast iron actually **improves** over time. It handles any heat source (stovetop, oven, grill, campfire) and can be revived even if rusted. Many people are still using Lodge pans handed down from grandparents – a true buy-it-for-life item ([Restoring a cast iron pan from 1850 : r/oddlysatisfying](https://www.reddit.com/r/oddlysatisfying/comments/17vsu7n/restoring_a_cast_iron_pan_from_1850/#:~:text=%E2%80%A2)). And Lodge stands behind their quality (they unofficially assist customers with issues ([[PDF] There is not a written warranty for Lodge Cast Iron cookware](https://images.thdstatic.com/catalog/pdfImages/b1/b1e00454-f9b1-446a-88c8-aa06d7ebc183.pdf#:~:text=,product%20problems%2C%20please%20contact))), though it’s rare you’ll need it if you take basic care of the pan. | [Amazon](https://www.amazon.com/dp/B00006JSUA/ref=nosim?tag=buywhoa-20) |
+  | Lodge Blacklock Cast Iron Skillet | $$ | $90 | A lighter version of the classic Lodge skillet, this pan replicates antique cast iron with a triple seasoned, super nonstick surface. | [Amazon](https://www.amazon.com/dp/B08C9FHFXH/ref=nosim?tag=buywhoa-20) |
+  | Field Company Cast Iron Skillet | $$$ | $165 | This skillet is lightweight, easy to maneuver, and built to last for generations. | [Amazon](https://www.amazon.com/dp/B09NXTH8NZ/ref=nosim?tag=buywhoa-20) |
+  | Stargazer Cast Iron Skillet | $$$ | $115 | Lightweight with an easy-pour edge, this skillet is extremely nonstick and easy to clean. | [Amazon](https://www.amazon.com/dp/B07YVPZT8G/ref=nosim?tag=buywhoa-20) |
+  | Smithey Ironware No. 10 Cast Iron Skillet | $$$ | $210 | A classic cast iron skillet with a smooth cooking surface, this skillet is known for its quality and durability. | [Amazon](https://www.amazon.com/dp/B07QKPQ1BH/ref=nosim?tag=buywhoa-20) |
+  | Yeti 12-Inch Cast Iron Skillet | $$$ | $250 | A splurge-worthy cast iron skillet with a flat bottom that can be used on an induction cooktop as well as a gas range or traditional electric cooktop. | [Yeti](https://www.yeti.com/) |
+  | Le Creuset Enameled Cast Iron Dutch Oven | $$$ | $380 | Renowned for its exceptional heat retention and distribution, this Dutch oven excels at braising, searing, roasting, and more. Its chip-resistant enamel finish makes it easy to clean and compatible with various cooktops. | [Amazon](https://www.amazon.com/dp/B01MXYN7OR/ref=nosim?tag=buywhoa-20) |
+  | KitchenAid 12-Inch Enameled Cast Iron Frying Pan | $$$ | $150 | After testing a slew of enameled cast iron skillets, experts named KitchenAid's 12-Inch Enameled Cast Iron Frying Pan their overall favorite. | [Amazon](https://www.amazon.com/dp/B07YX5N9W6/ref=nosim?tag=buywhoa-20) |
+  | Caraway 10.5 Inch Enameled Cast Iron Skillet | $$$ | $135 | This skillet is so beautiful you'll probably want to display it on the stove while not in use. | [Caraway](https://www.carawayhome.com/products/mini-duo) |
+  | All-Clad D3 Stainless Cookware | $$$ | $300 | Made in the USA with responsive tri-ply construction, this cookware offers even heating and exceptional durability. | [Amazon](https://www.amazon.com/dp/B00FUF5K8W/ref=nosim?tag=buywhoa-20) |
+  | Demeyere Industry 5 Cookware | $$$ | $400 | Belgian-made with a 5-ply construction and no interior rivets for easy cleaning, this cookware offers superior heat distribution and durability. | [Demeyere](https://www.surlatable.com/demeyere-industry5/) |
+  | De Buyer Carbon Steel Pan | $$ | $80 | Carbon steel pans have the durability of cast iron with a smoother, glassier surface. Extremely maneuverable, very durable, and naturally nonstick. | [Amazon](https://www.amazon.com/dp/B00462QP0W/ref=nosim?tag=buywhoa-20) |
